# PythonSenseiDay70

./: .env.template  main.py  pyproject.toml
files/templates/: contact.html  footer.html  header.html  index.html  login.html  make-post.html  post.html  register.html
